finished intermediate CSS with blog site

--- a/W3 excercises/JS functions/index1.html
+++ b/W3 excercises/JS functions/index1.html
@@ -52,7 +52,21 @@
         return(set);
       }
 
+      console.log("4. -----------------------");
+      //4. Write a JavaScript function that returns a passed string with letters in alphabetical order. Go to the editor
+      //Example string : 'webmaster'
+      //Expected Output : 'abeemrstw'
+      //Assume punctuation and numbers symbols are not included in the passed string.
 
+      //5. Write a JavaScript function that accepts a string as a parameter and converts the first
+      //letter of each word of the string in upper case. Go to the editor
+      //Example string : 'the quick brown fox'
+      //Expected Output : 'The Quick Brown Fox '
+
+      //6. Write a JavaScript function that accepts a string as a parameter and find the
+      //longest word within the string. Go to the editor
+      //Example string : 'Web Development Tutorial'
+      //Expected Output : 'Development'
 
     </script>
   </body>
