--- a/WebDev bootcamp/section 7 - bootstrap/bootstrapbasics.html
+++ b/WebDev bootcamp/section 7 - bootstrap/bootstrapbasics.html
@@ -6,12 +6,66 @@
     <title>Bootstrap basics</title>
   </head>
   <body>
-    <h1>Bootstrap basics</h1>
-    <button class="btn btn-success btn-xs">Click me</button>
-    <button class="btn btn-danger btn-xs">Click me</button>
-    <button class="btn btn-success btn-xs active">Click me</button>
-    <button class="btn btn-success btn-xs" disabled="disabled">Click me</button>
 
-    <a href="http://getbootstrap.com" class="btn btn-info btn-lg">Bootstrap Docs</a>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>This is jumbotron</h1>
+        <p>vhdasjdna kdmaskdmkas mdsamdk saldmlasd lamlam malasld</p>
+        <button class="btn btn-success btn-lg">Hi there!</button>
+      </div>
+
+      <h1>Bootstrap basics</h1>
+      <button class="btn btn-success btn-xs">Click me</button>
+      <button class="btn btn-danger btn-xs">Click me</button>
+      <button class="btn btn-success btn-xs active">Click me</button>
+      <button class="btn btn-success btn-xs" disabled="disabled">Click me</button>
+
+      <a href="http://getbootstrap.com" class="btn btn-info btn-lg">Bootstrap Docs</a>
+
+      <!--
+      form-group - groups form elements together (visually)
+      form-control - provides formatting to form elements
+      -->
+
+      <form>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputFile">File input</label>
+          <input type="file" id="exampleInputFile">
+          <p class="help-block">Example block-level help text here.</p>
+        </div>
+        <div class="checkbox">
+          <label>
+            <input type="checkbox"> Check me out
+          </label>
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+
+      <form class="form-inline">
+        <div class="form-group">
+          <label for="exampleInputName2">Name</label>
+          <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputEmail2">Email</label>
+          <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">
+        </div>
+        <button type="submit" class="btn btn-default">Send invitation</button>
+      </form>
+
+    </div>
+
+
+
+
+
   </body>
 </html>
