--- a/WebDev bootcamp/section 7 - bootstrap/bootstrapbasics.html
+++ b/WebDev bootcamp/section 7 - bootstrap/bootstrapbasics.html
@@ -49,6 +49,7 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
 
+      <!-- Inline form -->
       <form class="form-inline">
         <div class="form-group">
           <label for="exampleInputName2">Name</label>
