--- a/WebDev bootcamp/section 7 - bootstrap/purrfectmatch/index.html
+++ b/WebDev bootcamp/section 7 - bootstrap/purrfectmatch/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Purrfect Match</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
@@ -31,8 +33,8 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Sign up</a></li>
-        <li><a href="#">Log in</a></li>
+        <li><a href="#">Sign up <i class="fa fa-user-plus" aria-hidden="true"></i></a></li>
+        <li><a href="#">Log in <i class="fa fa-user" aria-hidden="true"></i></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -46,7 +48,7 @@
             <h1>Purrfect Match</h1>
             <h3>The only human-feline dating app</h3>
             <hr>
-            <button class="btn btn-default btn-lg">Get Started!</button>
+            <button class="btn btn-default btn-lg"><i class="fa fa-paw" aria-hidden="true"></i> Get Started!</button>
           </div>
         </div>
       </div>
