--- a/WebDev bootcamp/section 15 - Color Game Project/index.html
+++ b/WebDev bootcamp/section 15 - Color Game Project/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Color Game Project</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>The great <span id="colorDisplay">RGB</span> Color Game</h1>
+    <h1>The great
+      <br>
+      <span id="colorDisplay">RGB</span>
+      <br>
+      Color Game</h1>
 
     <div id="stripe">
       <button id="reset">New colors</button>
